Wed Oct  8 21:06:42 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/Network_Adapters_Test.cpp: Extend the errno checks to correctly
          sense insufficient privs on AIX (EACCESS).

Wed Oct  8 20:57:24 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/Ping_Socket.cpp (send_echo_check): Fixed problem introduced in
          Tue Oct  7 23:04:50 UTC 2008  Steve Huston  <shuston@riverace.com>
          while setting the ICMP id.

        * tests/Network_Adapters_Test.cpp: If the test can't run due to
          insufficient privs, do ACE_END_TEST and return; don't exit. Want
          to avoid triggering a test fail in the scoreboard when the test
          can't be run.

Wed Oct  8 18:29:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Options.cpp
        * apps/gperf/src/Options.h
          Fixed ACE_TCHAR problems

        * apps/gperf/src/gperf.mpc
        * apps/gperf/tests/gperf_test.mpb
          Build and test gperf when uses_wchar is set

Wed Oct  8 18:11:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Dirent_Test.cpp:
          Use the new ACE_HAS_TCHAR_DIRENT. Fixes bugzilla 3130

Wed Oct  8 18:08:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_dirent.h:
          Set ACE_HAS_TCHAR_DIRENT when the dirent struct has a tchar
          filename. This is currently with CodeGear C++ with
          uses wchar enabled or with dirent emulation. This fixes bugzilla
          3438

Wed Oct  8 09:44:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-borland-common.h:
          Moved the contents to config-win32-borland.h and removed
          this file

        * ace/config-win32-borland.h:
          Added contents of config-borland-common.h

Tue Oct  7 23:04:50 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-5.x.h: Added ACE_HAS_ICMP_SUPPORT
